fix: changes implementation after PR